trying flexbox align fix for logout link

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -19,6 +19,10 @@
     position: absolute;
 }
 
+#logout-link {
+    align-self: center;
+}
+
 .form-control{
     margin: 10px;
 }
